@@ -952,30 +952,23 @@ ol_osd_window_update_lyric_pixmap (OlOsdWindow *osd, int line)
 {
   int i;
   int w, h;
-  if (osd->inactive_lyric_pixmap[line] != NULL)
+  /* draws the inactive pixmaps */
+  for (i = 0; i < OL_LINEAR_COLOR_COUNT; i++)
   {
-    /* draws the inactive pixmaps */
-    for (i = 0; i < OL_LINEAR_COLOR_COUNT; i++)
-    {
-      ol_osd_render_set_linear_color (osd->render_context,
-                                      i,
-                                      osd->inactive_colors[i]);
-    }
-    ol_osd_draw_lyric_pixmap (osd, &osd->inactive_lyric_pixmap[line], osd->lyrics[line]);
-    /* draws the active pixmaps */
-    for (i = 0; i < OL_LINEAR_COLOR_COUNT; i++)
-    {
-      ol_osd_render_set_linear_color (osd->render_context,
-                                      i,
-                                      osd->active_colors[i]);
-    }
-    ol_osd_draw_lyric_pixmap (osd, &osd->active_lyric_pixmap[line], osd->lyrics[line]);
-    gdk_drawable_get_size (osd->active_lyric_pixmap[line], &w, &h);
+    ol_osd_render_set_linear_color (osd->render_context,
+                                    i,
+                                    osd->inactive_colors[i]);
   }
-  else
+  ol_osd_draw_lyric_pixmap (osd, &osd->inactive_lyric_pixmap[line], osd->lyrics[line]);
+  /* draws the active pixmaps */
+  for (i = 0; i < OL_LINEAR_COLOR_COUNT; i++)
   {
-    w = h = 0;
+    ol_osd_render_set_linear_color (osd->render_context,
+                                    i,
+                                    osd->active_colors[i]);
   }
+  ol_osd_draw_lyric_pixmap (osd, &osd->active_lyric_pixmap[line], osd->lyrics[line]);
+  gdk_drawable_get_size (osd->active_lyric_pixmap[line], &w, &h);
   int font_height = ol_osd_render_get_font_height (osd->render_context);
   osd->lyric_rects[line].x = ol_osd_window_calc_lyric_xpos (osd, line);
   osd->lyric_rects[line].y = font_height * line * (1 + LINE_PADDING);
