@@ -1,3 +1,7 @@
+2009-10-25  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_osd_window.c (ol_osd_window_update_lyric_pixmap): Remove the NULL check for pixmaps which is wrong
+
 2009-10-23  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_player.h: Adds new interface to control players
